Fix header overlap in table view

--- a/project-static/squest/css/squest-dark.css
+++ b/project-static/squest/css/squest-dark.css
@@ -5,4 +5,5 @@
 }
 .dtfc-fixed-left{
     background-color: #343a40 !important;
+    z-index: 1;
 }
